k8s/services/tests-private-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tests-private-deployment
  labels:
    app: tests-private
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tests-private
  template:
    metadata:
      labels:
        app: tests-private
    spec:
      containers:
      - name: tests-private
        image: host.minikube.internal:5000/k8s-sandbox-tests-private
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
