k8s/services/django-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-example-service
spec:
  selector:
    app: django-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
