k8s/services/express-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-example-service
spec:
  selector:
    app: express-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
