k8s/services/fastapi-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-example-service
spec:
  selector:
    app: fastapi-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
