k8s/services/gin-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-example-service
spec:
  selector:
    app: gin-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
