k8s/services/tests-private-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tests-private-service
spec:
  selector:
    app: tests-private
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
