k8s/services/django-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-example-ingress
spec:
  rules:
  - host: django-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-example-service
            port:
              number: 80
