k8s/services/fastapi-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-example-ingress
spec:
  rules:
  - host: fastapi-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-example-service
            port:
              number: 80
