k8s/services/gohttp-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohttp-example-ingress
spec:
  rules:
  - host: gohttp-example.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gohttp-example-service
            port:
              number: 80
